Section Overlap resolved (#682)

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -246,6 +246,20 @@ nav {
 .text-white {
   color: #fff;
 }
+
+.text-white-heading{
+  padding-top: 3%;
+}
+
+@media only screen and (max-width:380px){
+  .lab-section{
+    height: 600px!important;
+  }
+  .text-white-heading{
+    padding-top: 2%!important;
+  }
+}
+
 body {
   font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-smoothing: antialiased;
